# sokol-cs

./: .artifactignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CONTRIBUTING  CONTRIBUTING-CODE-CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTORS.md  INSPIRATION.md  LICENSE  MAINTAINERS.md  README-C-API.md  README-DOTNET-API.md  README.md  Sokol.cs  Sokol.sln  appveyor.yml  azure-pipelines.yml  bflat-experiment.cmd  bindgen-csharp.sh  bindgen.sh  build-native-library.cmd  build-native-library.sh  config.json  get-libs.sh  gitversion.yml  ignored.txt  library.cmd  library.sh  mingw-w64-x86_64.cmake  nuget.config  sokol.cs  sokol.props
.ci/: appveyor-windows.yml  azure-pipelines-linux.yml  azure-pipelines-macos.yml  azure-pipelines-netcore.yml  azure-pipelines-windows.yml
.circleci/: config.yml
.github/: CONTRIBUTING.MD  SUPPORT.md  config.yml  dependabot.yml  release-drafter.yml  settings.yml
.github/workflows/: bindgen.yml  build-test-deploy.yml  build-test-pack-deploy.yml  build.yml  build_deploy.yml  codecov.yml  commit-sokol_app-binaries.yml  commit-sokol_gfx-binaries.yml  commit.yml  dotnetcore.yml  pr.yml  pull-request.yml  release.yml  sokol.yml
bindgen/: appsettings.json  ast_linux.json  ast_osx.json  ast_win.json  config-build-c-library.json  config-extract-linux.json  config-extract-macos.json  config-extract-windows.json  config-generate-cs-mapped.json  config-generate-cs.json  cs.json  extract.sh  generate.sh  header.cs  merge.sh  read_c_code.sh  write_csharp_code.sh
bindgen/x-ast/: ast-cross-platform.json
devops/: azure.yml
lib/libSDL2-2.0.10/: libSDL2-2.0.0.dylib
lib/libSDL2-2.0.10/osx-x64/: libSDL2.dylib
src/: Sokol.sln  Sokol.sln.DotSettings  StyleCop-C-Style.ruleset  StyleCop-Disabled.ruleset  StyleCop-No-Documentation.ruleset  StyleCop.json  StyleCop.ruleset
src/Samples/Samples.ArrayTex/: Samples.ArrayTex.csproj
src/Samples/Samples.BufferOffsets/: Samples.BufferOffsets.csproj
src/Samples/Samples.Clear/: Samples.Clear.csproj
src/Samples/Samples.Cube/: Samples.Cube.csproj
src/Samples/Samples.DynTex/: Samples.DynTex.csproj
src/Samples/Samples.Instancing/: Samples.Instancing.csproj
src/Samples/Samples.MultipleRenderTargets/: Samples.MultipleRenderTargets.csproj
src/Samples/Samples.NonInterleaved/: NonInterleavedApplication.cs  Program.cs  Samples.NonInterleaved.csproj
src/Samples/Samples.Quad/: Samples.Quad.csproj
src/Samples/Samples.Triangle/: Samples.Triangle.csproj
src/Samples/Sokol.Graphics.Samples.Triangle/: Sokol.Graphics.Samples.Triangle.csproj
src/Samples/Sokol.Samples.Base/: App.cs  GetPointerDelegate.cs  GraphicsBackend.cs  OperatingSystem.cs  Platform.cs  Renderer.cs  RendererMetal.cs  RendererOpenGL.cs  RuntimeInformationHelper.cs  Sokol.Samples.Base.csproj  glew.cs
src/Samples/Sokol.Samples.Blend/: BlendApplication.cs  Program.cs
src/Samples/Sokol.Samples.BufferOffsets/: BufferOffsetsApplication.cs  Program.cs  Sokol.Samples.BufferOffsets.csproj
src/Samples/Sokol.Samples.Clear/: ClearApplication.cs  Program.cs  Sokol.Samples.Clear.csproj
src/Samples/Sokol.Samples.Cube/: CubeApplication.cs  Program.cs
src/Samples/Sokol.Samples.Instancing/: InstancingApplication.cs  Program.cs
src/Samples/Sokol.Samples.MultipleRenderTargets/: MultipleRenderTargetsApplication.cs  Program.cs  Sokol.Samples.MultipleRenderTargets.csproj
src/Samples/Sokol.Samples.NonInterleaved/: NonInterleavedApplication.cs  Program.cs
src/Samples/Sokol.Samples.Offscreen/: OffscreenApplication.cs  Program.cs
src/Samples/Sokol.Samples.Quad/: Program.cs  QuadApplication.cs  Sokol.Samples.Quad.csproj
src/Samples/Sokol.Samples.SDL2/: App.cs  DllMap.cs  GraphicsBackend.cs  Sokol.Samples.SDL2.csproj  glew.cs
src/Samples/Sokol.Samples.TexCube/: Program.cs  Sokol.Samples.TexCube.csproj  TexCubeApplication.cs
src/Samples/Sokol.Samples.Triangle/: Program.cs  Sokol.Samples.Triangle.csproj  TriangleApplication.cs
src/ShaderToy/ShaderToy.App/: ShaderToy.App.csproj
src/Sokol.App/: NativeLibraries.cs  Sokol.App.csproj  Sokol.App.csproj.DotSettings
src/Sokol.App/CoreAnimation/: CAMetalDrawable.cs  CAMetalLayer.cs
src/Sokol.Graphics/: AsciiString16.cs  BlittableBoolean.cs  GraphicsBackend.cs  Rgb8UInt.cs  RgbFloat.cs  Rgba8UInt.cs  RgbaFloat.cs  Sokol.Graphics.csproj  Sokol.Graphics.csproj.DotSettings  UnmanagedStringMemoryManager.cs  glew.cs  sokol_gfx.cs
src/Sokol.Graphics.DotNetCoreOpenGL/: Sokol.Graphics.DotNetCoreOpenGL.csproj
src/Sokol.Graphics.Metal/: Sokol.Graphics.Metal.csproj
src/Sokol.Graphics.Metal.Native/: Sokol.Graphics.Metal.Native.csproj
src/Sokol.Graphics.OpenGL/: Sokol.Graphics.OpenGL.csproj  gl.cs  glew.cs
src/Sokol.Graphics.OpenGL.Native/: Sokol.Graphics.OpenGL.Native.csproj
src/Sokol.Graphics.Tests/: BlittableHelper.cs  PInvokeTests.Data.cs  PInvokeTests.cs  Sokol.Graphics.Tests.csproj  StructHelper.cs  StructTests.Data.cs  StructTests.cs  UnitTest1.cs
src/Sokol.SDL2/: App.cs  Platform.cs  Sokol.SDL2.csproj
src/Sokol.SDL2.Native/: Sokol.SDL2.Native.csproj
src/c/production/sokol/: CMakeLists.txt  sokol.c  sokol.h
src/c/sokol/: CMakeLists.txt  sokol.c  sokol.h
src/cs/: .editorconfig  .globalconfig  Directory.Build.props  Directory.Build.targets  Sokol.sln  Sokol.sln.DotSettings  StyleCop.globalconfig  StyleCop.json
src/dotnet/: Directory.Build.props  Directory.Build.targets  Sokol.sln  Sokol.sln.DotSettings  StyleCop.json
src/libsdl2/: libsdl2.csproj
src/libsokol_gfx.direct3d11/: libsokol_gfx.direct3d11.csproj
src/libsokol_gfx.opengl/: libsokol_gfx.opengl.csproj
src/sokol_app/: sokol_app.cs  sokol_app.csproj
src/sokol_gfx/: GraphicsBackend.cs  GraphicsHelper.cs  GraphicsPlatform.cs  NativeLibrary.cs  sokol_gfx.cs  sokol_gfx.csproj  sokol_gfx.csproj.DotSettings
src/sokol_gfx.Tests/: PInvokeTests.cs  sokol_gfx.Tests.csproj
(+853 files in other folders)
